--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   razorpay_flutter: ^1.2.5
+  carousel_slider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -115,7 +116,9 @@ flutter:
     - assets/oreo_milkshake.jpg
     - assets/water_bottle.jpg
     - assets/watermelon_juice.jpg
-
+    - assets/photocopy.jpg
+    - assets/logo.jpg
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
